# Azure-Embedded-IoT-C-Sample

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azheap.c  azheap.h  base64util.c  base64util.h  bearssltagenerator.c  bearssltagenerator.h  certs.pem  devicesample.c  dockerfile  heap.c  heap.h  jsontest.c  llcomms.c  llcomms.h  sassample.c  vector_heap.c  vector_heap.h
include/: base64util.h  heap.h  llcomms.h  vector_heap.h
src/: azheap.c  base64util.c  bearssltagenerator.c  devicesample.c  heap.c  vector_heap.c
